// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshot — as link 1`] = `
<div>
  <a
    class="font-display font-semibold text-base w-full rounded-xl h-controllg transition duration-400 primary cursor-pointer text-white bg-blue border border-blue hover:bg-white hover:border-black  hover:text-black link-test cursor-pointer text-black flex text-center"
    href="https://example.com"
  >
    <div
      class="flex items-center justify-between w-full"
    >
      <div
        class="flex-1"
      >
        Link
      </div>
    </div>
  </a>
</div>
`;

exports[`Button > matches snapshot — primary 1`] = `
<div>
  <button
    class="font-display font-semibold text-base w-full rounded-xl h-controllg transition duration-400 primary cursor-pointer text-white bg-blue border border-blue hover:bg-white hover:border-black  hover:text-black"
  >
    <div
      class="flex items-center justify-between w-full"
    >
      <div
        class="flex-1"
      >
        Primary
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > matches snapshot — with icons 1`] = `
<div>
  <button
    class="font-display font-semibold text-base w-full rounded-xl h-controllg transition duration-400 primary cursor-pointer text-white bg-blue border border-blue hover:bg-white hover:border-black  hover:text-black"
  >
    <div
      class="flex items-center justify-between w-full"
    >
      <svg
        aria-hidden="true"
        data-slot="icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 15.75 7.5-7.5 7.5 7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <div
        class="flex-1"
      >
        With icons
      </div>
      <svg
        aria-hidden="true"
        data-slot="icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m4.5 15.75 7.5-7.5 7.5 7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </button>
</div>
`;
